5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1618_2930.log
== TEST (2019-04-02 10:04:41) 
-- CODE:
from math import*
p = float(input("periodo de oscilaçao: "))
g = 9.81

#criando variaveis
k = (p/2pi)**2
print(k)

-- ERROR:
File "XXXX", line 6
    k = (p/2pi)**2
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:05:05) 
-- CODE:
from math import*
p = float(input("periodo de oscilaçao: "))
g = 9.81

#criando variaveis
k = (p/2*pi)**2
print(k)

-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:05:49) 
-- CODE:
from math import*
p = float(input("periodo de oscilaçao: "))
g = 9.81

#criando variaveis
k = (p/2*pi)**2
print(k)

-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:06:07) 
-- CODE:
from math import*
p = float(input("periodo de oscilaçao: "))
g = 9.81

#criando variaveis
k = (p/2*pi)**2
print(p)

-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:06:47) 
-- CODE:
from math import*
t = float(input("periodo de oscilaçao: "))
g = 9.81

#criando variaveis
k = (p/2*pi)**2
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    k = (p/2*pi)**2
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:06:57) 
-- CODE:
from math import*
T = float(input("periodo de oscilaçao: "))
g = 9.81

#criando variaveis
k = (p/2*pi)**2
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    k = (p/2*pi)**2
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:23) 
-- CODE:
from math import*
T = float(input("periodo de oscilacao: "))
g = 9.81

#criando variaveis
k = (p/2*pi)**2
print(T)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    k = (p/2*pi)**2
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:09:47) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao: "))
g = 9.81

#criando variaveis
k = (t/2*pi)**2
print(k)

-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:10:40) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81

#criando variaveis
k = (t/2*pi)**2
l = k*g
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:10:51) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81

#criando variaveis
k = (t/2*pi)**2
l = k*g
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:15) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81

#criando variaveis
k = (t/2*pi)**2
l = k*g
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:16:35) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81

#criando variaveis
k = (t/2*pi)**2
l = g*k
print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:18:34) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81

#criando variaveis
#k = (t/2*pi)**2
#l = g*k
#print(l)
r = g*(t/2*pi)**2
print(r)
-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:20:55) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81

print(t)

-- OUTPUT:
20.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:21:05) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81

print(g)

-- OUTPUT:
9.81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:21:56) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 m/s**2

k = g


print(g)

-- ERROR:
File "XXXX", line 3
    g = 9.81 m/s**2
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:45) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2pi)
p = pi

print(p)

-- ERROR:
File "XXXX", line 6
    k = (t/2pi)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:59) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)
p = pi

print(p)

-- OUTPUT:
3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:23:13) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)


print(k)

-- OUTPUT:
31.41592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:23:24) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2


print(k)

-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:24:12) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2pi)**2

print(l)

-- ERROR:
File "XXXX", line 7
    l = g*(t/2pi)**2
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:24:20) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(l)

-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:31) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(k)

-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:25:58) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t//2*pi)**2
l = g*(t/2*pi)**2

print(k)

-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:26:45) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t//2*pi)**2
l = g*(t//2*pi)**2

print(l)



-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:01) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t//2*pi)**2

print(l)



-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:13) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(l)



-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:21) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(l)



-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:27:46) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*((t/2*pi)**2)

print(l)



-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:28:45) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9,81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(l)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    l = g*(t/2*pi)**2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:30:38) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(k)



-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:31:54) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

#print(k)
w = g*(61.685027)
print(w)


-- OUTPUT:
605.13011487
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:32:17) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(l)


-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:32:21) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(l)


-- EXECUTION TIME:
0.219437
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
9682.08191746866
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
687240.2258031239
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
2544103.5411699265
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:32:39) 
-- CODE:
from math import*
t = int(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2

print(l)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    t = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:34:14) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 


k = (t/2*pi)**2
l = g*(t/2*pi)**2
l2 = g*k

print(l2)


-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:36:27) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
ts = t/60

k = (ts/2*pi)**2
#l = g*(t/2*pi)**2
l2 = g*k

print(l2)


-- OUTPUT:
2.6894671992968497
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:37:28) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
ts = t**-1

k = (ts/2*pi)**2
#l = g*(t/2*pi)**2
l2 = g*k

print(ts)


-- OUTPUT:
0.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:37:40) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
ts = t**-1

k = (ts/2*pi)**2
#l = g*(t/2*pi)**2
l2 = g*k

print(l2)


-- OUTPUT:
0.060513011984179126
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:38:18) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo


k = (ts/2*pi)**2
#l = g*(t/2*pi)**2
l2 = g*k

print(l2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    k = (ts/2*pi)**2
NameError: name 'ts' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:38:35) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo


k = (t/2*pi)**2
#l = g*(t/2*pi)**2
l2 = g*k

print(l2)


-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:39:14) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo


k = (t/2*pi)**2
#l = g*(t/2*pi)**2
l2 = g*k
l3 = l2/100
print(l3)


-- OUTPUT:
96.8208191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:40:24) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo


k = (t/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(l)


-- OUTPUT:
9682.08191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:41:09) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo


k = (t/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(k)


-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:12) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
p = t/100

k = (p/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(k)


-- OUTPUT:
0.09869604401089357
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:24) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
p = t/10

k = (p/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(k)


-- OUTPUT:
9.869604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:38) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
p = t

k = (p/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(k)


-- OUTPUT:
986.9604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:42:56) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
p = t/10

k = (p/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(k)


-- OUTPUT:
9.869604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:09) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
p = t/5

k = (p/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(k)


-- OUTPUT:
39.47841760435743
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:44) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
p = t/10


k = (p/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(k)


-- OUTPUT:
9.869604401089358
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:43:54) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo
p = t/10


k = (p/2*pi)**2
#l = g*(t/2*pi)**2
l = g*k

print(l)


-- OUTPUT:
96.8208191746866
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:46:03) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 
#convertendo




l = g*((t/(2*pi))**2


print(l)


-- ERROR:
File "XXXX", line 12
    print(l)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:47:20) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 





l = g*((t/(2*pi)))**2


print(l)


-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:47:26) 
-- CODE:
from math import*
t = float(input("periodo de oscilacao em segundos: "))
g = 9.81 





l = g*((t/(2*pi)))**2


print(l)


-- EXECUTION TIME:
0.126726
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313338
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800127
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
